--- a/css/creative.css
+++ b/css/creative.css
@@ -64,6 +64,7 @@ p {
     color: rgba(255,255,255,2);
 }
 
+
 section {
     padding: 100px 0;
 }
@@ -184,6 +185,7 @@ header {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+
 }
 
 header .header-content {
@@ -470,4 +472,17 @@ img::-moz-selection {
 
 body {
     webkit-tap-highlight-color: #222;
+}
+
+.clip-circle {
+    background:url(../img/profile.jpg) no-repeat;
+    background-size:256px 256px;
+    background-position:0px 0px;
+    height:256px;
+    width:256px;
+    border-radius:50%;
+    overflow:hidden;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
 }
