--- a/css/creative.css
+++ b/css/creative.css
@@ -203,6 +203,7 @@ header .header-content .header-content-inner h1 {
     margin-top: 0;
     margin-bottom: 0;
     font-weight: 700;
+    text-shadow: 1px 1px #999999;
 }
 
 header .header-content .header-content-inner hr {
@@ -214,6 +215,7 @@ header .header-content .header-content-inner p {
     font-size: 16px;
     font-weight: 300;
     color: rgba(255,255,255,2);
+    text-shadow: 1px 1px #999999;
 }
 
 @media(min-width:768px) {
